--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,1 +1,6 @@
-<p>hero-detail works!</p>
+<p>hero-detail works! {{author}}</p>
+
+<button (click)="spin()">Click me</button> <br>
+<span class="{{selected}}">{{showText}}</span>
+
+
