--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,6 @@
 
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-<style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-  }
-</style>
 
-<div class="content" role="main">
-  <h1>Welcome to {{title}}!</h1>
-  <h2>Start editing to see some magic happen here</h2> 
-</div>
-<app-hero-detail > </app-hero-detail>
+
